# QuantumShield

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  server.ts  tsconfig.json  vercel.json
.github/: copilot-instructions.md
app/: page.tsx  providers.tsx
app/api/_health/: route.ts
app/api/bot/backtest/: route.ts
app/api/bot/status/: route.ts
app/api/bot/tick/: route.ts
app/api/bot/trade/close/: route.ts
app/api/kem/decaps/: route.ts
app/api/kem/encaps/: route.ts
app/api/keys/: route.ts
app/api/qs/sign/: route.ts
app/api/sign/: route.ts
app/api/verify/: route.ts
app/apps/bot/: BotClient.tsx  page.tsx
app/components/: AddressCard.tsx  DsaBox.tsx  KemBox.tsx  LockBox.tsx  WalletIO.tsx
app/lib/: address.ts  sign.ts  types.ts  walletStore.ts
app/qs-wallet/: Client.tsx  page.tsx
app/wallet/: page.tsx
bridge/: index.ts  package.json
components/: QuantumShieldButton.tsx
crates/qs-crypto/: Cargo.toml
crates/qs-crypto/src/: lib.rs
crates/qs-walletd/: Cargo.toml
crates/qs-walletd/src/: main.rs
lib/: address.ts  bridge.ts  pq.ts  qs-walletd-client.ts  qskey.ts  secure.ts  storage.ts
scripts/: nuclear.sh
scripts/wallet/: derivation.ts  evm-balance.ts  evm-send.ts  sol-balance.ts  sol-send.ts  vault.ts
src/: bridge.rs  main.rs  server.rs
src/app/: layout.tsx  page.tsx  providers.tsx
src/app/wallet/: page.tsx
src/components/: NetworkSelect.tsx  SendSol.tsx
src/lib/: keys.ts  rpc.ts  secure.ts  solana.ts  walletStore.ts
src/types/: qs-wallet-wasm.d.ts
