[package]
name = "qs-walletd"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
hex = "0.4"

# Use qs-crypto with ed25519 fallback and NO default (PQ) features
qs-crypto = { path = "../qs-crypto", default-features = false, features = ["ed25519"] }
qs-utils  = { path = "../qs-utils" }
